--- a/eb-plat/.settings/org.eclipse.core.resources.prefs
+++ b/eb-plat/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/WEB-INF/views/goods/product_edit.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/goods/product_list.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/goods/spec_edit.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/goods/type_edit.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/goods_type_form.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/unauthorized.jsp=UTF-8
 encoding//src/test/java=UTF-8
